<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">助听器</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">停止助听器</string>
    <string name="start">开启助听器</string>
    <string name="exit">退出</string>
    <string name="Media">媒体音量</string>
    <string name="Sph">通话音量</string>
    <!-- Audio start -->
    <string name="Audio">Audio</string>
    <string name="Audio_ModeSetting">Audio_ModeSetting</string>
    <string name="Audio_ModeSetting_TextView">Value is 0~255</string>
    <string name="Audio_ModeSetting_EditText">0</string>
    <string name="Audio_ModeSetting_Button">Set</string>
    <string name="Audio_SpeechEnhancement">Audio_SpeechEnhancement</string>
    <string name="Audio_SpEnhancement_TextView">Value is 0~100</string>
    <string name="Audio_SpEnhancement_EditText">0</string>
    <string name="Audio_SpEnhancement_Button">Set</string>
    <string name="Audio_DebugInfo">Audio_DebugInfo</string>
    <string name="Audio_DebugSession">Audio_DebugSession</string>
    <string name="Audio_MagiAsr_Text">Enable using Sound Recorder to verify MagiASR feature</string>
    <string name="Audio_MagiAsr">MagiASR Verify Mode Enable</string>
    <string name="Audio_AecRec_Text">Enable recording with AEC processing</string>
    <string name="Audio_AecRec">Record with AEC enable</string>
    <string name="Audio_DebugInfo_ParameterText">Please choose the parameter:</string>
    <string name="Audio_DebugInfo_ValueText">Please input the value:</string>
    <string name="Audio_DebugInfo_EditText">0</string>
    <string name="Audio_DebugInfo_Button">Set</string>
    <string name="Audio_SpeechLogger">Speech Logger</string>
    <string name="Audio_SpeechLogger_EnableText">Enable speech logger:</string>
    <string name="Audio_SpeechLogger_Enable">Enable speech log</string>
    <string name="Audio_SpeechLogger_FileText">File:/sdcard/mtklog/audio_dump/VM_log</string>
    <string name="Audio_SpeechLogger_LocationText">File location:/sdcard/speechlog</string>
    <string name="Audio_SpeechLogger_Play">Play log</string>
    <string name="Audio_LogPlayer">Audio_LogPlayer</string>
    <string name="Audio_Level_Text">Level</string>
    <string name="Audio_VOIPLogger_Enable">Enable VOIP switch</string>
    <string name="Audio_VOIPLogger_EnableText">Enable VOIP logger:</string>
    <string name="Audio_EPLDebug_FileText">File:/sdcard/mtklog/audio_dump/SPE_EPL.EPL</string>
    <string name="Audio_EPLDebug_Enable">Enable AP Speech log</string>
    <string name="Audio_MaxVol_Text">Max Vol. 0~160 </string>
    <string name="Audio_MaxVol_Text_headset">Max Headset Vol. 0~160 </string>
    <string name="Audio_MaxVol_Text_speaker">Max Speaker Vol. 0~160 </string>
    <string name="Audio_MaxVol_Set">Set</string>
    <string name="Audio_VOIPLogger_Info">File Location: /sdcard/VOIP_DebugInfo</string>
    <string name="Audio_CTM4WAYLogger_EnableText">Enable CTM4WAY Logger</string>
    <string name="Audio_CTM4WAYLogger_Enable">Enable</string>
    <string name="Audio_KTone">K Tone</string>
    <string name="Audio_KTone_StopBtn">Stop</string>
    <string name="Audio_KTone_StartBtn">Start</string>
    <string name="Audio_KTone_Freq">Frequency</string>
    <string name="Audio_Fir_Title">Current FIR Type</string>
    <string name="Audio_ModeSetting_Title">Type</string>
    <string name="Audio_AudioLogger">Audio Logger</string>
    <string name="Audio_Enable_EPL">Normal-VM + EPL</string>
    <string name="Audio_Enable_Normalvm">Normal-VM Only</string>
    <string name="Audio_Dump_SpeechDbgInfo">Dump Speech Debug Info</string>
    <string name="Audio_AudioLogger_Text">File:/sdcard/mtklog/audio_dump/*.pcm</string>
    <string name="Audio_AudioLogger_Text1">File location: /sdcard/StreamIn_*.vm</string>
    <string name="Audio_StreamOutput_Dump">Audio Stream Output Dump</string>
    <string name="Audio_MixerBuffer_Dump">Audio Mixer Buffer Dump</string>
    <string name="Audio_TrackBuffer_Dump">Audio Track Buffer Dump</string>
    <string name="A2DP_StreamOutput_Dump">A2DP Stream Output Dump</string>
    <string name="Audio_StreamInput_Dump">Audio Stream Input Dump</string>
    <string name="Audio_IdleModeRecdVM_Dump">Audio Idle Mode Record VM Dump</string>
    <string name="audio_val_type_sip">Sip</string>
    <string name="audio_val_type_ring">Ring</string>
    <string name="audio_val_type_mic">Mic</string>
    <string name="audio_val_type_fmr">FMR</string>
    <string name="audio_val_type_sph">Sph</string>
    <string name="audio_val_type_sph2">Sph2</string>
    <string name="audio_val_type_sid">Sid</string>
    <string name="audio_val_type_media">Media</string>
    <string name="audio_val_type_matv">Matv</string>
    <string name="set_success_title">Setting success</string>
    <string name="set_success_msg">Set audio volume succeeded.</string>
    <string name="set_error_title">Setting error</string>
    <string name="set_error_msg">Set audio volume failed.</string>
    <string name="get_data_error_title">Get data error</string>
    <string name="get_data_error_msg">Get audio data error.</string>
    <string name="get_wbdata_error_title">Get WB data error</string>
    <string name="get_wbdata_error_msg">Get audio WB data error.</string>
    <string name="number_arrage_tip">The input is not correct. Please input the number
 	between 0 and </string>
    <string name="input_null_tip">Please input the value.</string>
    <string name="set_success_tip">set parameter success.</string>
    <string name="set_failed_tip">set parameter failed.</string>
    <string name="no_sdcard_title">SD Card is not available</string>
    <string name="no_sdcard_msg">Please insert the SD Card.</string>
    <string name="sdcard_busy_title">SD card is busy</string>
    <string name="sdcard_busy_msg">Sorry, your SD card is busy.</string>
    <string name="input_length_error">The input is not correct. Please input the number
	between 0 and 65535.</string>
	<string name="fir_text">***NO FIR Selected***</string>
	 <string name="text_tip">Value is 0~160</string>

</resources>