<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:layout_height="wrap_content" android:id="@+id/start"
		android:layout_width="fill_parent" android:text="@string/start"></Button>
	<Button android:layout_height="wrap_content" android:id="@+id/stop"
		android:layout_width="fill_parent" android:text="@string/stop"></Button>
	<Button android:layout_height="wrap_content" android:id="@+id/exit"
	   android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_margin="3dp"
		android:layout_width="fill_parent" android:text="@string/exit" android:background="#A50505"></Button>
	
	<Button android:id="@+id/TextView01" android:layout_height="wrap_content"
		android:text="@string/Media" android:layout_width="fill_parent"></Button>
	<Button android:id="@+id/TextView02" android:layout_height="wrap_content"
		android:text="@string/Sph" android:layout_width="fill_parent"></Button>
</LinearLayout>
