<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/Audio_ModeSetting_TextView"
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="@string/Audio_ModeSetting_TextView" >
                </TextView>

                <EditText
                    android:id="@+id/Audio_ModeSetting_EditText"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="10dip"
                    android:numeric="integer"
                    android:text="@string/Audio_ModeSetting_EditText" >
                </EditText>

                <Button
                    android:id="@+id/Audio_ModeSetting_Button"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/Audio_ModeSetting_Button" >
                </Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/Audio_MaxVol_Tv_Max"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/Audio_MaxVol_Text_headset" >
            </TextView>

            <EditText
                android:id="@+id/Audio_MaxVol_Edit_headset"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="10dip"
                android:numeric="integer" >
            </EditText>

            <Button
                android:id="@+id/Audio_MaxVol_Set_headset"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/Audio_MaxVol_Set" >
            </Button>
        </LinearLayout>

        
    </LinearLayout>

</ScrollView>